# agent-comparison

./: .gitignore  README.md
literature-review/: main.py  review.md
podcaster-agent/: VideoSurfer.py  main.py  requirements.txt  tools.py  transcript_agent.py  transcription_server.py
recruiter-agent-team/autogen-recruiter-agent-team/: log_browser.py  main.py  readme.md  requirements.txt  run_workflow.py
recruiter-agent-team/autogen-recruiter-agent-team/data/: backup.md  resume_accepted_farid_bellameche.md
recruiter-agent-team/autogen-recruiter-agent-team/tools/: file_system_tools.py
recruiter-agent-team/autogen2-recruiter-agent-team/: main.py  requirements.txt  utils.py
recruiter-agent-team/autogen2-recruiter-agent-team/tools/: file_system_tools.py  gmail_email.py  zoom_meeting.py
recruiter-agent-team/data/jd/: job_description_AI_specialist.md
recruiter-agent-team/prompt/: user_message.txt  variables.json
stock-analysis/autogen-ai-stock-analysis/: logs.db  main.py  readMe.md  requirements.txt  run_workflow.py  stock_analysis.txt  workflow_stock_analysis_ReaAct_workflow.json
stock-analysis/autogen-ai-stock-analysis/tools/: system_tool.py
stock-analysis/crew-ai-stock-analysis/: README.md  pyproject.toml  stock_analysis.txt
stock-analysis/crew-ai-stock-analysis/src/crew_ai_stock_analysis/: crew.py  main.py
stock-analysis/crew-ai-stock-analysis/src/crew_ai_stock_analysis/config/: agents.yaml  tasks.yaml
stock-analysis/langgraph-ai-stock-analysis/: generate_graph.py  langgraph.json  main.py  requirements.txt  stock_analysis.py  stock_analysis.txt
(+2 files in other folders)
